--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,4 +9,13 @@
     <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Main Fragment"
+        android:textSize="25dp"
+        android:id="@+id/textView"
+        android:layout_below="@+id/section_label"
+        android:layout_marginTop="61dp" />
+
 </RelativeLayout>
