--- a/app/src/main/res/layout/fragment_dynamic_xyplot.xml
+++ b/app/src/main/res/layout/fragment_dynamic_xyplot.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jeff.car02.DynamicXYPlotFragment">
+    tools:context="com.example.jeff.car02.Fragments.DynamicXYPlotFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <com.androidplot.xy.XYPlot
