--- a/app/src/main/res/layout/fragment_dynamic_xyplot.xml
+++ b/app/src/main/res/layout/fragment_dynamic_xyplot.xml
@@ -1,11 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.jeff.car02.Fragments.DynamicXYPlotFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    tools:context="com.example.jeff.car02.Fragments.DynamicXYPlotFragment"
+    android:background="#ffffffff"
+    >
 
     <!-- TODO: Update blank fragment layout -->
     <com.androidplot.xy.XYPlot
         android:id="@+id/XYPlot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#ffffffff" />
+
 </RelativeLayout>
