--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="range_label_font_size">10dp</dimen>
+    <dimen name="domain_label_font_size">10dp</dimen>
+    <dimen name="plot_left_padding">10dp</dimen>
+    <dimen name="plot_top_padding">10dp</dimen>
+    <dimen name="plot_right_padding">50dp</dimen>
+    <dimen name="plot_bottom_padding">10dp</dimen>
 </resources>
