--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/pager"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context="com.example.jeff.car02.Activities.MainActivity">
+    tools:context="com.example.jeff.car02.activities.MainActivity">
 </android.support.v4.view.ViewPager>
