--- a/app/src/main/res/layout/fragment_section4.xml
+++ b/app/src/main/res/layout/fragment_section4.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.example.jeff.car02.Fragments.Fragment_section4"
+    android:layout_height="match_parent" tools:context="com.example.jeff.car02.fragments.Fragment_section4"
     android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
