Updated resources for navpanel and tweaked login

--- a/mojiosdksrc/src/main/res/layout/activity_oauth_login.xml
+++ b/mojiosdksrc/src/main/res/layout/activity_oauth_login.xml
@@ -4,9 +4,24 @@
     android:layout_height="match_parent"
     tools:context="com.TTT.MojioSDKSource.MojioSDKSource" >
 
-    <WebView 
+    <WebView
         android:id="@+id/loginwebview"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/webviewProgressBar"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:indeterminate="true" />
 
 </RelativeLayout>
