--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -8,4 +10,6 @@
     <dimen name="plot_top_padding">10dp</dimen>
     <dimen name="plot_right_padding">50dp</dimen>
     <dimen name="plot_bottom_padding">60dp</dimen>
+    <dimen name="navigation_drawer_width">240dp</dimen>
+
 </resources>
