--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -4,19 +4,34 @@
     android:layout_width="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView6"
-        android:layout_gravity="top" />
+        android:padding="16dp"
+        android:background="@color/material_blue_grey_800">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/usericon"
+            android:background="@drawable/usericon"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textView_username"
+            android:paddingTop="10dp" />
+    </LinearLayout>
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:choiceMode="singleChoice"
     android:divider="@android:color/transparent" android:dividerHeight="0dp"
     android:id="@+id/drawerListView"
-    android:background="#cccc"
-    tools:context="com.example.jeff.car02.activities.NavigationDrawerFragment" />
+    android:background="@color/white"
+    tools:context="com.example.jeff.car02.activities.NavigationDrawerFragment"
+    android:paddingTop="5dp"/>
 
 </LinearLayout>
