--- a/app/src/main/res/layout/activity_main_activity_nav.xml
+++ b/app/src/main/res/layout/activity_main_activity_nav.xml
@@ -7,8 +7,12 @@
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
-    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <include
+            android:id="@+id/app_bar"
+            layout="@layout/tool_bar"/>
+        </RelativeLayout>
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
@@ -17,10 +21,12 @@
          android:layout_gravity="left" instead. -->
     <!-- The drawer is given a fixed width in dp and extends the full height of
          the container. -->
-    <fragment android:id="@+id/navigation_drawer"
-    android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
-    android:layout_gravity="start"
-    android:name="com.example.jeff.car02.activities.NavigationDrawerFragment"
-    tools:layout="@layout/fragment_navigation_drawer"/>
+        <fragment android:id="@+id/navigation_drawer"
+            android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:name="com.example.jeff.car02.activities.NavigationDrawerFragment"
+            tools:layout="@layout/fragment_navigation_drawer"/>
+
+
 
 </android.support.v4.widget.DrawerLayout>
