--- a/app/src/main/res/layout/fragment_dynamic_xyplot.xml
+++ b/app/src/main/res/layout/fragment_dynamic_xyplot.xml
@@ -11,7 +11,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     tools:context="com.example.jeff.car02.fragments.DynamicXYPlotFragment"
-    android:background="#ffffffff">
+    android:background="#ffffffff"
+    android:paddingTop="@dimen/tool_bar_height">
 
     <com.androidplot.xy.XYPlot
         android:id="@+id/XYPlot"
