--- a/app/src/main/res/layout/fragment_section1.xml
+++ b/app/src/main/res/layout/fragment_section1.xml
@@ -1,6 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.example.jeff.car02.fragments.SummaryFragment">
+    android:layout_height="match_parent" tools:context="com.example.jeff.car02.fragments.SummaryFragment"
+    android:paddingTop="@dimen/tool_bar_height">
 
     <!-- TODO: Update blank fragment layout -->
 
