--- a/app/src/main/res/layout/fragment_section3.xml
+++ b/app/src/main/res/layout/fragment_section3.xml
@@ -3,4 +3,5 @@
     android:name="com.google.android.gms.maps.MapFragment"
     android:id="@+id/map"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/tool_bar_height"/>
