--- a/app/src/main/res/layout/fragment_section4.xml
+++ b/app/src/main/res/layout/fragment_section4.xml
@@ -1,7 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="com.example.jeff.car02.fragments.Fragment_section4"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="@dimen/tool_bar_height">
 
     <!-- TODO: Update blank fragment layout -->
     <Button
