--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/tool_bar_height"
     android:background="@color/Orange"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    android:elevation="4dp"
-    android:paddingTop="16dp">
-
+    android:elevation="4dp">
 </android.support.v7.widget.Toolbar>
